--- a/L8/Makefile
+++ b/L8/Makefile
@@ -1,5 +1,5 @@
-task3.o: t3.o stringLength.o
-	gcc t3.o stringLength.o -o task3.o
+task3.out: t3.o stringLength.o
+	gcc t3.o stringLength.o -o task3.out
 t3.o: t3.cpp
 	gcc -c t3.cpp
 stringLength.o: stringLength.cpp
